@@ -1,3 +1,4 @@
+* BUG#7755 Modification de la définition du domaine du protocole de commissionnement en remplacant la date de début du contrat par la date d'effet initiale
 * FEA#7359 Ajout d'informations supplémentaires sur les plans et protocoles de commissionnements afin d'aider l'utilisateur à comprendre quels sont les protocoles utilisés (directement ou en cascade) pour un produit
 * FEA#7665 Permettre l'utilisation de la date de début et de fin d'une ligne de commission dans le moteur de règle (cela est utile lorsque des dates de calcul sont définies dans le plan de commissionnement)
 * BUG#7514 Restauration de la relation 'commission' à partir de contrat/quittance
